# smart-fridge

./: .env.example  .gitignore  Makefile  PLAN.kr.md  README.md  front_end_prompt.md  package-lock.json  package.json  pitch.kr.md  user_scenario_english.md  vercel.json
.AGENT/: design.md  technical_implementation.md  user_scenario_complete_final.md  user_scenario_complete_final_v4.md  user_scenario_v3.md  user_scenario_v5.md
app/: globals.css  layout.tsx  page.tsx
backend/: .env.example  README.md
backend_bak/: .gitignore  pyproject.toml
backend_bak/app/: main.py
backend_bak/app/api/: __init__.py  deps.py
backend_bak/app/api/routes/: expiry.py  inventory.py  recipes.py  reports.py
backend_bak/app/core/: clock.py
backend_bak/app/models/: __init__.py
backend_bak/app/providers/llm/: __init__.py  azure_openai.py  factory.py
backend_bak/app/providers/receipt/: base.py  factory.py  llm_vision.py
backend_bak/app/providers/recipe/: __init__.py  factory.py  hybrid.py  seed_db.py
backend_bak/app/schemas/: __init__.py  recipe.py  report.py
backend_bak/app/seed/: data.py  loader.py
backend_bak/app/services/: __init__.py  consumption_service.py  expiry_service.py  inventory_service.py  recipe_service.py  report_service.py
components/: Badge.tsx  Button.tsx  ConfirmDialog.tsx  FreshnessDot.tsx  IngredientRow.tsx  Screen.tsx  Spinner.tsx  UploadCard.tsx  icons.tsx
frontend/: index.html  vite.config.js
frontend_bak/: package-lock.json
lib/: api.ts  bizcrush.ts  config.ts  emoji.ts  freshness.ts  gemini.ts  image.ts  shelflife.ts  store.ts  supabase.ts  (+3 more)
(+52 files in other folders)
